--- a/BackEnd/UnitTest/UnitTest.csproj
+++ b/BackEnd/UnitTest/UnitTest.csproj
@@ -52,6 +52,7 @@
     <Compile Include="HelperValidatorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProductTest.cs" />
+    <Compile Include="PurchaseTest.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
