--- a/BackEnd/BackEnd/BackEnd.csproj
+++ b/BackEnd/BackEnd/BackEnd.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BackEndException.cs" />
     <Compile Include="HelperValidator.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="Promotion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Purchase.cs" />
     <Compile Include="User.cs" />
