--- a/BackEnd/BackEnd/BackEnd.csproj
+++ b/BackEnd/BackEnd/BackEnd.csproj
@@ -45,6 +45,7 @@
     <Compile Include="HelperValidator.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Promotion20Off.cs" />
+    <Compile Include="PromotionTotalLook.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Purchase.cs" />
     <Compile Include="User.cs" />
