--- a/BackEnd/UnitTest/UnitTest.csproj
+++ b/BackEnd/UnitTest/UnitTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ProductTest.cs" />
     <Compile Include="PurchaseTest.cs" />
     <Compile Include="Promotion20OffTest.cs" />
+    <Compile Include="Promotion3x2Test.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
