[green] returns 3x1 fidelity is never applicable

--- a/BackEnd/UnitTest/UnitTest.csproj
+++ b/BackEnd/UnitTest/UnitTest.csproj
@@ -56,6 +56,7 @@
     <Compile Include="PurchaseTest.cs" />
     <Compile Include="Promotion20OffTest.cs" />
     <Compile Include="Promotion3x2Test.cs" />
+    <Compile Include="Promotion3x1FidelityTest.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
