--- a/BackEnd/BackEnd/BackEnd.csproj
+++ b/BackEnd/BackEnd/BackEnd.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IPromotionable.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Promotion20Off.cs" />
+    <Compile Include="Promotion3x1Fidelity.cs" />
     <Compile Include="Promotion3x2.cs" />
     <Compile Include="PromotionTotalLook.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
