--- a/Ecommerce/BusinessLogic/BusinessLogic.csproj
+++ b/Ecommerce/BusinessLogic/BusinessLogic.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataAccessInterface\DataAccessInterface.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\LogicInterface\LogicInterface.csproj" />
   </ItemGroup>
