--- a/Ecommerce/WebApi/appsettings.json
+++ b/Ecommerce/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Ecommerce": "Server=.\\SQLExpress;Database=EcommerceDb;Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=True"
+  }
 }
