--- a/Ecommerce/WebApi/appsettings.json
+++ b/Ecommerce/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Ecommerce": "Server=DIEGOO\\SQLEXPRESS01;Database=EcommerceDb;Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=True"
+    "Ecommerce": "Server=.\\SQLEXPRESS;Database=EcommerceDb;Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=True"
   }
 }
