--- a/Frontend/ecommerce-app/angular.json
+++ b/Frontend/ecommerce-app/angular.json
@@ -62,7 +62,8 @@
               "browserTarget": "ecommerce-app:build:production"
             },
             "development": {
-              "browserTarget": "ecommerce-app:build:development"
+              "browserTarget": "ecommerce-app:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
